--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
         <!-- COLUNA ESQUERDA -->
         <div>
           <section id="sobre">
-            <h3>O que é o HableTech Software Fellowship?</h3>
+            <h3>O que é o HablaTech Software Fellowship?</h3>
             <p class="section-subtitle">
               Um ambiente seguro para aprender, errar, crescer e construir
               projetos que realmente contam na sua trajetória profissional.
@@ -630,3 +630,4 @@
   </script>
 </body>
 </html>
+
