Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -632,7 +632,8 @@
                 do programa.
               </p>
               <p class="benefit-item">
-                Terá acesso à uma rodada de entrevistas com empresas norte americanas.
+                Terá acesso à uma rodada de entrevistas com empresas norte americanas. 
+                Importante: A chance de entrevista é garantida, mas o emprego final depende da performance do aluno
               </p>
               <p class="benefit-item">
                 Por tudo isso que o HablaTech Software Fellowship é mais mais que bootcamp.
@@ -664,6 +665,10 @@
               <p class="audience-item">
                 Pessoas que querem destravar o mercado internacional e ter acesso
                 a vagas em empresas de nível mundial.
+              </p>
+              <p class="audience-item">
+               O programa é conduzido em imersão. Recomendamos proficiência básica 
+                em inglês para máximo aproveitamento.
               </p>
             </div>
           </section>
@@ -751,3 +756,4 @@
   </script>
 </body>
 </html>
+
