Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -668,7 +668,8 @@
               </p>
               <p class="audience-item">
                O programa é conduzido em imersão. Recomendamos proficiência básica 
-                em inglês para máximo aproveitamento.
+                em inglês para máximo aproveitamento. Serão ofertadas ajudas pontuais 
+                por instrutor bilíngue e uso de IA para traduções.
               </p>
             </div>
           </section>
@@ -756,4 +757,5 @@
   </script>
 </body>
 </html>
+
 
