Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -733,11 +733,9 @@
             </div>
 
             <p class="form-note">
-              Seus dados serão utilizados exclusivamente para a finalidade de 
-              comunicação sobre o bootcamp e atividades relacionadas, e estando em 
-              conformidade com a Lei Geral de Proteção de Dados (LGPD - Lei nº 13.709/2018). 
-              Eles não serão compartilhados com terceiros para outras finalidades. 
-              Você pode solicitar a remoção a qualquer momento
+              Seus dados serão utilizados exclusivamente para a finalidade de comunicação 
+              sobre o bootcamp e atividades relacionadas, e estando em conformidade com a 
+              Lei Geral de Proteção de Dados (LGPD - Lei nº 13.709/2018).
             </p>
           </div>
         </aside>
@@ -759,6 +757,7 @@
   </script>
 </body>
 </html>
+
 
 
 
