--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       padding: 8px 10px;
       border-radius: 10px;
       background: rgba(15, 23, 42, 0.9);
-      border: 1px solid rgba(148, 163, 184, 0.4);
+      border: 1px solid var(--accent);
       font-size: 0.78rem;
     }
 
@@ -757,6 +757,7 @@
   </script>
 </body>
 </html>
+
 
 
 
