--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
               </p>
               <p class="benefit-item">
                 Terá acesso à uma rodada de entrevistas com empresas norte americanas. 
-                Importante: A chance de entrevista é garantida, mas o emprego final depende da performance do aluno
+                Importante: A chance de entrevista é garantida, mas o emprego e a conquista da vaga final depende de você.
               </p>
               <p class="benefit-item">
                 Por tudo isso que o HablaTech Software Fellowship é mais mais que bootcamp.
@@ -757,6 +757,7 @@
   </script>
 </body>
 </html>
+
 
 
 
